Prevent tag overflow

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -540,7 +540,7 @@ body {
 				> .team {
 					min-height: 20px;
 					margin: auto 0 0 0;
-
+					overflow: hidden;
 
 					> .label {
 						margin-right: 5px;
